# wribbon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: office2016.qrc  standard.qrc
resources/standard/qss/: standard.qss
samples/: CMakeLists.txt
samples/MainWindow/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/wribbon/: ApplicationButton.cpp  ApplicationButton.hpp  Button.cpp  Button.h  Button.hpp  CMakeLists.txt  ContextualTab.cpp  ContextualTab.hpp  ContextualTabSet.cpp  ContextualTabSet.hpp  Global.hpp  Group.cpp  Group.hpp  Item.cpp  Item.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  QuickAccessToolbar.cpp  QuickAccessToolbar.hpp  Ribbon.cpp  Ribbon.hpp  StatusBar.cpp  StatusBar.hpp  Tab.cpp  Tab.h  Tab.hpp  Theme.hpp
src/wribbon/Private/: BigButton.cpp  BigButton.hpp  CloseButton.cpp  DynamicLayout.cpp  DynamicLayout.hpp  LittleButton.cpp  LittleButton.hpp  MaximizeButton.cpp  MinimizeButton.cpp  MinimizeButton.h  RibbonUpperPart.cpp  RibbonUpperPart.hpp  TabBar.cpp  TabBar.hpp  Title.cpp  WindowButtonGroup.cpp  WindowButtonGroup.hpp
wribbon/: Button.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Ribbon.cpp  Ribbon.h  WRibbonGlobal.h
wribbon/Private/: CloseButton.cpp  CloseButton.h  MaximizeButton.h  MinimizeButton.cpp  RibbonUpperPart.cpp  RibbonUpperPart.h  Title.h  WindowButtonGroup.cpp  WindowButtonGroup.h
